# lattice

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.pytorch-test  Dockerfile.ubuntu  LICENSE  README.md  build.rs  console-design.md  docker-compose.yaml  endurance-test.sh  kind-config.yaml  operator-console-contract.md  resign.sh  rsync.sh  t  tarpaulin.toml  versions.toml
crates/lattice-agent/: Cargo.toml
crates/lattice-agent/src/: client.rs  events.rs  exec.rs  executor.rs  health.rs  kube_client.rs  lib.rs  pivot.rs  subtree.rs  watch.rs
crates/lattice-agent/src/client/: capi.rs  connection.rs  mod.rs
crates/lattice-agent/src/commands/: apply_manifests.rs  exec.rs  kubernetes.rs  mod.rs  move_complete.rs  peer_routes.rs  state_sync.rs  status_request.rs  sync_resources.rs
crates/lattice-api/: Cargo.toml
crates/lattice-api/src/: auth.rs  auth_chain.rs  auth_context.rs  backend.rs  error.rs  k8s_forwarder.rs  kubeconfig.rs  lib.rs  portforward.rs  proxy.rs  router.rs  sa_auth.rs  server.rs
crates/lattice-api/src/auth/: authorize.rs  mod.rs  oidc.rs  oidc_controller.rs
crates/lattice-api/src/cedar/: mod.rs  policy_engine.rs  validation.rs
crates/lattice-api/src/exec_proxy/: handlers.rs  io.rs  local_io.rs  mod.rs  remote_io.rs  websocket.rs
crates/lattice-api/src/k8s_forwarder/: mod.rs  tests.rs
crates/lattice-api/src/routing/: mod.rs  path.rs
crates/lattice-auth/: Cargo.toml
crates/lattice-auth/src/: bearer.rs  error.rs  identity.rs  lib.rs  oidc.rs
crates/lattice-backup/: Cargo.toml
crates/lattice-backup/src/: backup_policy_controller.rs  backup_store_controller.rs  cluster_backup_controller.rs  lib.rs  restore_controller.rs  service_backup_controller.rs  velero.rs
crates/lattice-cache/: Cargo.toml
crates/lattice-cache/src/: lib.rs
crates/lattice-capi/: Cargo.toml  build.rs
crates/lattice-capi/src/: client.rs  constants.rs  installer.rs  lib.rs
crates/lattice-capi/src/provider/: aws.rs  docker.rs  mod.rs  openstack.rs  proxmox.rs  registry.rs
crates/lattice-cedar/: Cargo.toml
crates/lattice-cedar/src/: context.rs  controller.rs  engine.rs  entities.rs  entity.rs  error.rs  external_endpoint_auth.rs  image_auth.rs  lib.rs  mesh_auth.rs  metrics.rs  secret_auth.rs  security_auth.rs  server.rs  volume_auth.rs
crates/lattice-cedar/src/jwt/: jwks.rs  mod.rs  validator.rs
crates/lattice-cedar/src/policy/: compiler.rs  mod.rs  store.rs
crates/lattice-cell/: Cargo.toml
crates/lattice-cell/src/: blocklist.rs  capi_proxy.rs  cilium.rs  connection.rs  exec_tunnel.rs  k8s_tunnel.rs  kubeconfig.rs  lib.rs  move_sender.rs  peer_routes.rs  resilient_tunnel.rs  resources.rs  route_reconciler.rs  server.rs  state_sync.rs  subtree_registry.rs
crates/lattice-cell/src/bootstrap/: autoscaler.rs  aws_addons.rs  bundle.rs  errors.rs  generator.rs  mod.rs  (+4 more)
crates/lattice-cert-issuer/: Cargo.toml
crates/lattice-cert-issuer/src/: builder.rs  controller.rs  lib.rs
crates/lattice-cli/: Cargo.toml  build.rs
crates/lattice-cli/src/: config.rs  error.rs  git.rs  lib.rs  main.rs  repo.rs
crates/lattice-cloud-provider/: Cargo.toml
crates/lattice-cloud-provider/src/: controller.rs  lib.rs
crates/lattice-cluster/: Cargo.toml  build.rs
crates/lattice-cluster/src/: cilium.rs  controller.rs  lib.rs
crates/lattice-cluster/templates/: aws-ccm.yaml  aws-ebs-csi.yaml
crates/lattice-common/: Cargo.toml
crates/lattice-common/benches/: service_graph.rs
crates/lattice-common/src/: capi_lifecycle.rs  clusterctl.rs  config.rs  crd_registry.rs  credentials.rs  error.rs  events.rs  fips.rs  gpu.rs  kube_utils.rs  leader_election.rs  lib.rs  mesh.rs  metrics.rs  protocol.rs  resources.rs  retry.rs  status_check.rs  system_namespaces.rs  telemetry.rs  watcher.rs  yaml.rs
crates/lattice-core/: Cargo.toml
crates/lattice-core/src/: lib.rs  quantity.rs  system_namespaces.rs  yaml.rs
crates/lattice-cost/: Cargo.toml
crates/lattice-cost/src/: calculator.rs  configmap.rs  error.rs  lib.rs  rates.rs
crates/lattice-crd/: Cargo.toml
crates/lattice-crd/src/: lib.rs
crates/lattice-daemonset/: Cargo.toml
crates/lattice-daemonset/src/: main.rs  slice_runner.rs
crates/lattice-dns-provider/: Cargo.toml
crates/lattice-dns-provider/src/: dns_provider.rs  lib.rs
crates/lattice-gpu-monitor/: Cargo.toml
crates/lattice-gpu-monitor/src/: annotator.rs  collector.rs  config.rs  features.rs  gpu_loss.rs  lib.rs  model.rs  scorer.rs  trainer.rs  window.rs
crates/lattice-image-provider/: Cargo.toml
crates/lattice-image-provider/src/: controller.rs  lib.rs
crates/lattice-infra/: Cargo.toml  build.rs
crates/lattice-infra/manifests/: gpu-monitor-rbac.yaml  gpu-monitor-sa.yaml  istiod-proxy-rbac.yaml  istiod-proxy-sa.yaml
crates/lattice-infra/src/: lib.rs  mtls.rs  pki.rs  system_namespaces.rs
crates/lattice-job/: Cargo.toml
crates/lattice-job/src/: compiler.rs  controller.rs  error.rs  lib.rs
crates/lattice-mesh-member/: Cargo.toml
crates/lattice-mesh-member/benches/: policy.rs
crates/lattice-mesh-member/src/: controller.rs  ingress.rs  lib.rs  remote_secret.rs
crates/lattice-model/: Cargo.toml
crates/lattice-model/src/: compiler.rs  controller.rs  download.rs  error.rs  lib.rs
crates/lattice-move/: Cargo.toml
crates/lattice-move/src/: agent.rs  cell.rs  error.rs  graph.rs  lib.rs  local.rs  sequence.rs  utils.rs
crates/lattice-operator/: Cargo.toml  build.rs
crates/lattice-operator/src/: cell_proxy_backend.rs  cilium.rs  controller_runner.rs  forwarder.rs  lib.rs  main.rs  metrics.rs  proto.rs
crates/lattice-operator/tests/: kind.rs
crates/lattice-proto/: Cargo.toml  build.rs
crates/lattice-proto/proto/: agent.proto
crates/lattice-proto/src/: lib.rs  tracing.rs
crates/lattice-quota/: Cargo.toml
crates/lattice-quota/benches/: solver_bench.rs
crates/lattice-quota/src/: budget.rs  capacity.rs  controller.rs  enforcement.rs  lib.rs  solver.rs  store.rs
crates/lattice-secret-provider/: Cargo.toml
crates/lattice-secret-provider/src/: controller.rs  eso.rs  lib.rs  webhook.rs
(+601 files in other folders)
