[workspace]
resolver = "2"
members = [
    "crates/lattice-common",
    "crates/lattice-proto",
    "crates/lattice-infra",
    "crates/lattice-capi",
    "crates/lattice-agent",
    "crates/lattice-cell",
    "crates/lattice-cluster",
    "crates/lattice-cedar",
    "crates/lattice-service",
    "crates/lattice-cloud-provider",
    "crates/lattice-secret-provider",
    "crates/lattice-operator",
    "crates/lattice-cli",
    "crates/lattice-move",
    "crates/lattice-api",
    "crates/lattice-backup",
    "crates/lattice-workload",
    "crates/lattice-mesh-member",
    "crates/lattice-tetragon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates
lattice-common = { path = "crates/lattice-common" }
lattice-proto = { path = "crates/lattice-proto" }
lattice-infra = { path = "crates/lattice-infra" }
lattice-agent = { path = "crates/lattice-agent" }
lattice-cluster = { path = "crates/lattice-cluster" }
lattice-service = { path = "crates/lattice-service" }
lattice-cloud-provider = { path = "crates/lattice-cloud-provider" }
lattice-capi = { path = "crates/lattice-capi" }
lattice-cell = { path = "crates/lattice-cell" }
lattice-secret-provider = { path = "crates/lattice-secret-provider" }
lattice-move = { path = "crates/lattice-move" }
lattice-cedar = { path = "crates/lattice-cedar" }
lattice-api = { path = "crates/lattice-api" }
lattice-backup = { path = "crates/lattice-backup" }
lattice-workload = { path = "crates/lattice-workload" }
lattice-mesh-member = { path = "crates/lattice-mesh-member" }
lattice-tetragon = { path = "crates/lattice-tetragon" }


# Kubernetes
kube = { version = "0.98", features = ["runtime", "derive", "client", "rustls-tls", "admission", "ws"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
json-patch = "3"
jsonptr = "0.6"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Concurrency
crossbeam = "0.8"
dashmap = "6.1"
moka = { version = "0.12", features = ["future", "sync"] }
parking_lot = "0.12"
once_cell = "1.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
yaml-rust2 = { git = "https://github.com/evan-hines-js/yaml-rust2.git", features = ["yaml-1-1"] }
toml = "0.8"

# Templating
minijinja = { version = "2", features = ["custom_syntax"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time/date handling
time = "0.3"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry
opentelemetry = { version = "0.27", default-features = false, features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"

# gRPC
tonic = { version = "0.12", features = ["tls", "transport"] }
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# HTTP
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Crypto
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
aws-lc-rs = { version = "1.12" }
subtle = "2.6"
zeroize = "1.8"

# PKI
rcgen = { version = "0.14", features = ["aws_lc_rs", "pem", "x509-parser"] }
x509-parser = { version = "0.16", features = ["verify"] }
rustls-pemfile = "2.2"
base64 = "0.22"
pem = "3.0"

# Streaming
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Async utilities
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# JSON Schema
schemars = { version = "0.8", features = ["chrono"] }

# UUID
uuid = { version = "1.11", features = ["v4"] }

# Random
rand = "0.8"

# Auth
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
cedar-policy = "4"

# URL parsing
url = "2"

# Regex
regex = "1"

# Git
git2 = "0.19"

# File system
walkdir = "2.5"
dirs = "5"

# Dev dependencies
mockall = "0.13"
rstest = "0.23"
tokio-test = "0.4"
insta = "1.41"
fake = { version = "3.0", features = ["derive"] }
tempfile = "3.14"
tower = { version = "0.5", features = ["util"] }
criterion = { version = "0.5", features = ["html_reports"] }
