[package]
name = "lattice-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Auth proxy for Lattice cluster access"

[features]
fips = ["lattice-common/fips"]

[dependencies]
# Internal
lattice-common = { workspace = true }
lattice-proto = { workspace = true }
lattice-auth = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# HTTP
axum = { workspace = true, features = ["ws"] }
hyper = { workspace = true }
hyper-util = { workspace = true }
reqwest = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }
lattice-cedar = { workspace = true }
cedar-policy = { workspace = true }

# Time
chrono = { workspace = true }

# Crypto
rustls = { workspace = true }
aws-lc-rs = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
base64.workspace = true
uuid = { workspace = true }

# Middleware
tower = { workspace = true }

# Security
zeroize = { workspace = true }

# Networking
socket2 = { workspace = true }

# Concurrency
dashmap = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }
