[package]
name = "lattice-backup"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Backup and restore controllers for Lattice - manages Velero Schedule and BackupStorageLocation"

[features]
default = []
fips = ["lattice-common/fips"]

[dependencies]
lattice-common = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
