[package]
name = "lattice-cache"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kube.workspace = true
k8s-openapi.workspace = true
dashmap.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
lattice-common = { path = "../lattice-common" }
lattice-core = { workspace = true }
