[package]
name = "lattice-capi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cluster API provider management for Lattice"

[features]
default = []
fips = ["lattice-common/fips"]

[dependencies]
# Internal
lattice-common = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Templating
minijinja = { workspace = true }

# Random
rand = { workspace = true }

[build-dependencies]
toml.workspace = true
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
