[package]
name = "lattice-cedar"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cedar authorization engine for Lattice service mesh"

[features]
default = []
fips = ["aws-lc-rs/fips"]

[dependencies]
# Internal crates
lattice-common = { workspace = true }

# Cedar policy engine
cedar-policy = "4"

# Envoy ext_authz types (0.5 matches tonic 0.12)
envoy-types = "0.5"

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# HTTP client for JWKS
reqwest = { workspace = true }

# Crypto (FIPS-validated)
rustls = { workspace = true }
aws-lc-rs = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Base64 for JWT
base64 = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
rstest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
