[package]
name = "lattice-cell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parent cluster (cell) infrastructure for Lattice"

[features]
default = ["fips"]
fips = ["lattice-common/fips", "lattice-infra/fips"]

[dependencies]
# Internal
lattice-common = { workspace = true }
lattice-infra = { workspace = true }
lattice-move = { workspace = true }
lattice-proto = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# gRPC
tonic = { workspace = true }

# HTTP
axum = { workspace = true }
axum-server = { workspace = true }

# Crypto
rustls = { workspace = true }
aws-lc-rs = { workspace = true }
pem = { workspace = true }
base64 = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
rstest = { workspace = true }
x509-parser = { workspace = true }
mockall = { workspace = true }
