[package]
name = "lattice-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for managing Lattice cluster hierarchies"

[features]
default = []
provider-e2e = []

[dependencies]
lattice-common.workspace = true
lattice-agent.workspace = true
lattice-cell.workspace = true
lattice-cluster.workspace = true
lattice-operator = { path = "../lattice-operator" }

# CLI
clap.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Kubernetes
kube.workspace = true
k8s-openapi.workspace = true

# HTTP
reqwest = { workspace = true, features = ["rustls-tls", "json"] }

# Time
chrono.workspace = true

# TLS (FIPS-validated crypto)
rustls.workspace = true
aws-lc-rs.workspace = true

[dev-dependencies]
futures.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
tokio-util.workspace = true
urlencoding = "2.1.3"

[[bin]]
name = "lattice"
path = "src/main.rs"

[lib]
name = "lattice_cli"
path = "src/lib.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"
