[package]
name = "lattice-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Common types for Lattice: CRDs, errors, and utilities"

[features]
default = []
fips = ["aws-lc-rs/fips"]

[dependencies]
kube.workspace = true
k8s-openapi.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
schemars.workspace = true
tokio.workspace = true
aws-lc-rs.workspace = true
rustls.workspace = true
minijinja.workspace = true
rand.workspace = true
base64.workspace = true
dashmap.workspace = true

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
