[package]
name = "lattice-cost"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cost estimation engine for Lattice workloads"

[features]
fips = ["lattice-common/fips"]

[dependencies]
# Internal
lattice-common = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Serialization
serde = { workspace = true }
serde_yaml = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
