[package]
name = "lattice-dns-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DNSProvider controller for Lattice - validates DNS provider configuration"

[dependencies]
lattice-common = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
