[package]
name = "lattice-gpu-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU health monitoring vertical slice: DCGM scraping, anomaly detection, node annotation"

[dependencies]
burn.workspace = true
reqwest.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
lattice-common.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
anyhow.workspace = true
rand.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
