[package]
name = "lattice-image-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ImageProvider controller for Lattice - manages container registry credentials via ESO"

[dependencies]
lattice-common = { workspace = true }
lattice-core = { workspace = true }
lattice-secret-provider = { workspace = true }

# Kubernetes
kube = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
