[package]
name = "lattice-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Infrastructure components for Lattice (PKI, bootstrap manifests)"

[dependencies]
# Internal
lattice-common = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# gRPC
tonic = { workspace = true }

# Crypto/PKI
rustls = { workspace = true }
aws-lc-rs = { workspace = true }
rcgen = { workspace = true }
x509-parser = { workspace = true }
base64 = { workspace = true }
pem = { workspace = true }

# Crypto
zeroize = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
time = { workspace = true }

[build-dependencies]
toml.workspace = true
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
fips = ["aws-lc-rs/fips"]
