[package]
name = "lattice-model"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LatticeModel controller and compiler for Lattice model serving workloads"

[features]
fips = ["lattice-common/fips", "lattice-workload/fips", "aws-lc-rs/fips"]

[dependencies]
# Internal
lattice-common = { workspace = true }
lattice-core = { workspace = true }
lattice-crd = { workspace = true }
lattice-workload = { workspace = true }
lattice-quota = { workspace = true }
lattice-cache = { workspace = true }
lattice-tetragon = { workspace = true }
lattice-volcano = { workspace = true }
lattice-cedar = { workspace = true }
lattice-secret-provider = { workspace = true }
lattice-cost = { workspace = true }

# Crypto (FIPS)
aws-lc-rs = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Async utilities
futures = { workspace = true }
async-trait = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
serde_json = { workspace = true }
mockall = { workspace = true }
