[package]
name = "lattice-operator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lattice Kubernetes operator for multi-cluster lifecycle management"

[features]
default = ["fips"]
fips = ["lattice-common/fips", "lattice-infra/fips", "lattice-cluster/fips", "lattice-service/fips", "lattice-backup/fips"]
e2e = []
aws-e2e = []
provider-e2e = []

[dependencies]
lattice-common.workspace = true
lattice-proto.workspace = true
lattice-infra.workspace = true
lattice-capi.workspace = true
lattice-agent.workspace = true
lattice-cell.workspace = true
lattice-cluster.workspace = true
lattice-service.workspace = true
lattice-cloud-provider.workspace = true
lattice-secret-provider.workspace = true
lattice-api.workspace = true
lattice-backup.workspace = true
lattice-cedar.workspace = true


kube.workspace = true
k8s-openapi.workspace = true
json-patch.workspace = true
jsonptr.workspace = true
tokio.workspace = true
crossbeam.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
minijinja.workspace = true
thiserror.workspace = true
anyhow.workspace = true
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
axum.workspace = true
axum-server.workspace = true
reqwest.workspace = true
rustls.workspace = true
aws-lc-rs.workspace = true
rcgen.workspace = true
x509-parser.workspace = true
rustls-pemfile.workspace = true
base64.workspace = true
pem.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures.workspace = true
clap.workspace = true
chrono.workspace = true
schemars.workspace = true
uuid.workspace = true
rand.workspace = true

[build-dependencies]
toml.workspace = true
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
mockall.workspace = true
rstest.workspace = true
tokio-test.workspace = true
insta.workspace = true
fake.workspace = true
tempfile.workspace = true
tower.workspace = true
criterion.workspace = true

[[bin]]
name = "lattice-operator"
path = "src/main.rs"

[lib]
name = "lattice_operator"
path = "src/lib.rs"
