[package]
name = "lattice-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gRPC protocol definitions for Lattice agent-cell communication"

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
opentelemetry.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true

[build-dependencies]
tonic-build.workspace = true
